--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="title">
-  Index pagefuidjoskiufsdjkl
+  Index page Valeria
 </h1>
 <h2 class="subtitle">
     Subtitle textdfcjhbjhd vcjhn v
