--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-  Index pagefuidjoskiufsdjkl
-</h1>
-<h2 class="subtitle">
-    Subtitle textdfcjhbjhd vcjhn v
-</h2>
+<div class="d-flex justify-content-between p-2">
+  <h1>All Topics</h1>
+</div>
+{% for topic in topics %}
+<div class="card" style="margin-bottom: 50px;">
+  <div class="card-body d-flex align-items-center">
+    <div class="d-flex align-items-center"><a class="d-block d-flex align-items-center" href="/viewtopic/{{topic.id}}"><h5 class="card-title m-auto">{{topic.theme}}</h5></a></div>
+    
+    <!-- <p class="card-text">{{topic.text}}</p> -->
+    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+  </div>
+</div>
+  {% endfor %}
+
 {% endblock %}
