--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lera's Project</title>
+    <title>friedco</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <header>
 
 
-            <nav class="navbar navbar-expand-sm navbar-light bg-info main-nav">
+        <nav class="navbar navbar-expand-sm navbar-light  main-nav" style="background-color: #8B008B;">
                 <div class="container">
-                    <a class="navbar-brand" href="{{url_for('main.index')}}">Lera's Ankets</a>
+                    <a class="navbar-brand" style= "font-size: 30px; color: cornsilk;" href="{{url_for('main.index')}}">whowho?</a>
             
                     <ul class="nav navbar-nav">
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('cards.mycards')}}">My Ankets</a>
+                            <a class="nav-link" href="{{url_for('cards.mycards')}}">Friend cards</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
