--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-  Index page Valeria
+<body style= "background-color: #DDA0DD;"></body>
+<h1 class="title" style="margin-top: 10%; padding: 20px; font-size: 50px; color: #BC8F8F">
+  Remember anything about your friends?
 </h1>
-<h2 class="subtitle">
-    Subtitle textdfcjhbjhd vcjhn v
+<h2 class="subtitle" style="padding: 20px; font-style: italic; font-weight: lighter;">
+    We will help you never forget! 
 </h2>
 {% endblock %}
