--- a/app/templates/mycards.html
+++ b/app/templates/mycards.html
@@ -9,7 +9,7 @@
 
 <div class="row row-cols-1 row-cols-md-3 mt-50">
     {% if not cards%}
-    <h2>You have no ankets yet</h2>
+    <h2>Nothing yet!</h2>
     {% else %}
     {% for card in cards%}
     <a href="/showcard/{{id}}/{{card.id}}">
