--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,11 +31,11 @@
         <div class="price-group d-flex justify-space-between align-middle">
             <div class="form-group d-flex flex-column justify-space-between">
                 <label >Min. Price</label>
-                <input type="text"   placeholder="12" name="min_price">
+                <input type="text" class="form-control"  placeholder="12" name="min_price">
             </div>
             <div class="form-group d-flex flex-column">
                 <label >Max. Price</label>
-                <input type="text"  placeholder="799" style="width: 200px;" name="max_price">
+                <input type="text" class="form-control" placeholder="799" style="width: 200px;" name="max_price">
             </div>
         </div>
         <div class="filters__confirm m-auto">
@@ -52,8 +52,8 @@
           <div class="card" style="max-width: 250px;">
               <img src="../static/img/{{product.image}}.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-              <h5 class="card-title text-black">{{product.name}} </h5>
-              <p class="card-text text-right">{{product.price}}</p>
+              <h5 class="card-title text-black">{{product[3]}} </h5>
+              <p class="card-text text-right">{{product[5]}}</p>
               </div>
           </div>
           </div>
