--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lera's Project</title>
+    <title>SwimPRO</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
@@ -14,13 +14,20 @@
 
             <nav class="navbar navbar-expand-sm navbar-light bg-info main-nav">
                 <div class="container">
-                    <a class="navbar-brand" href="{{url_for('main.index')}}">Lera's Ankets</a>
-            
+                    <a class="navbar-brand" href="{{url_for('main.index')}}">SwimPRO</a>
                     <ul class="nav navbar-nav">
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('cards.mycards')}}">My Ankets</a>
+                            <a class="nav-link" href="{{url_for('students.studentslist', group_id=0)}}">Students</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('trainings.trainingslist', group_id=0)}}">Trainings</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        {% if current_user.is_authenticated %}
+
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
                         </li>
@@ -39,11 +46,28 @@
 
         
     </header>
-    <main>
-        <div class="container mt-50">
+    <main class="d-flex">
+        {% if current_user.is_authenticated %}
+        <div class="sidebar left ">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                  Groups
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="{{route}}/0">All</a></li>
+                    {% for group in grouplist %}
+                  <li class="list-group-item"><a href="{{route}}/{{group.id}}">{{group.text}}</a></li>
+                  {% endfor %}
+
+                </ul>
+              </div>
+          </div>
+          {% endif %}
+
             {% block content %}
             {% endblock %}
-        </div>
+        
+        
     </main>
 
 
