--- a/app/templates/trainings.html
+++ b/app/templates/trainings.html
@@ -1,49 +1,25 @@
 {% extends "base.html" %}
-
 {% block content %}
-    <div class="container">
-  <div class="row align-items-start">
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
+<div class="main-side">
+
+  
+  <div class="d-flex justify-content-between p-2 m-auto">
+    <h1 class="m-5">All Trainings</h1>
+
+        <a href="/newtraining"><button type="button" class="btn btn-primary">Add</button></a>    
+
+  </div>
+  {% for training in trainings %}
+  <div class="card w-150 mb-3">
+    <div class="card-body">
+      <a href="/viewtraining/{{training.id}}" class="text-decoration-none text-body"><h5 class="card-title">{{training.date}}</h5></a>
     </div>
   </div>
-  <div class="row align-items-center">
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-  </div>
-  <div class="row align-items-end">
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-  </div>
-  {% endblock %}
+  {% endfor %}
+</div>
+</div>
 
-
-
-
-
-
-
-</body>
+{% endblock %}
 
 
 
@@ -55,6 +31,3 @@
 
 
 
-
-
-</html>
