--- a/app/templates/viewstudent.html
+++ b/app/templates/viewstudent.html
@@ -1,26 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+
 <div class="container">
-<div class="d-flex justify-content-between p-2">
-    <h1>Info</h1>
-    <div class="d-flex">
-        <a href="/editstudent/{{student.id}}"><button type="button" class="btn btn-success">Edit</button></a>
-        <form action="/deletestudent", method="POST">
-            <input type="text" value="{{student.id}}" name="student_id" hidden>
-            <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
-    
+    <div class="d-flex justify-content-between p-2">
+        <h1>Card</h1>
+        <div class="d-flex">
+            <a href="/editstudent/{{student.id}}"><button type="button" class="btn btn-success mr-2">Edit</button></a>
+            <form action="/deletestudent", method="POST">
+                <input type="text" value="{{student.id}}" name="student_id" hidden>
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+        </div>
     </div>
-    
-    <br>
-</div>
-    <div class="info">
+
+
+<div class="container m-auto w-150">
 
         <p><b>Имя: </b>{{student.name}}</p>
         <p><b>Фамилия: </b>{{student.surname}}</p>
-        <!-- <p><b>Группа: </b>{{group}}</p> -->
-    </div>
-</div>
+        <p><b>Группа: </b>{{group}}</p>
 
+</div>
+</div>
 {%endblock%}
