--- a/app/templates/newstudent.html
+++ b/app/templates/newstudent.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container m-auto w-150">
-    <form class="w-50 m-auto pt-5" action="/newstudent" method="POST">
+    <form class="w-50  pt-5" action="/newstudent" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
           <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name" >
