--- a/app/templates/newtraining.html
+++ b/app/templates/newtraining.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container m-auto w-150">
-    <form class="w-50 m-auto pt-5" action="/newtraining" method="POST">
+    <form class="w-50  pt-5" action="/newtraining" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">Date</label>
           <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="date" >
