--- a/app/templates/trainings.html
+++ b/app/templates/trainings.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="main-side">
-
-  
-  <div class="d-flex justify-content-between p-2 m-auto">
-    <h1 class="m-5">All Trainings</h1>
-
-        <a href="/newtraining"><button type="button" class="btn btn-primary">Add</button></a>    
-
+<div class="container">
+  <div class="d-flex justify-content-between p-2">
+      <h1>All Trainings</h1>
+      <div class="d-flex">
+          <a href="/newtraining"><button type="button" class="btn btn-primary">Add</button></a>
+      </div>
   </div>
+  <div class="container-sm mt-5">
   {% for training in trainings %}
   <div class="card w-150 mb-3">
     <div class="card-body">
@@ -16,6 +15,7 @@
     </div>
   </div>
   {% endfor %}
+</div>
 </div>
 </div>
 
