--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between p-2">
-  <h1>All Topics</h1>
+  <h1>Все Вопросы</h1>
 </div>
 {% for topic in topics %}
 <div class="card" style="margin-bottom: 50px;">
