--- a/app/templates/addtopic.html
+++ b/app/templates/addtopic.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="d-flex justify-content-between p-2">
-   <h1>Add Topic</h1>
+   <h1>Добавить новую тему</h1>
 </div>
 <form action="/addtopic" method="POST">
     <div class="form-group">
-        <label >Topic Theme</label>
-        <input class="form-control" type="text" name="topic_theme">
+        <label >Тема</label>
+        <input class="form-control" type="text" name="Тема вопроса">
     </div>
     <div class="form-group">
-        <label >Topic text</label>
-        <textarea class="form-control" rows="3" name="topic_text"></textarea>
+        <label >Текст Темы</label>
+        <textarea class="form-control" rows="3" name="Текст Вопроса"></textarea>
       </div>
-      <input type="submit" class="input-group-text bg-success text-white" value="Publish">
+      <input type="submit" class="input-group-text bg-success text-white" value="Добавить">
 </form>
 
 
