--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Senya's Project</title>
+    <title>QuaAns</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
@@ -14,29 +14,29 @@
 
             <nav class="navbar navbar-expand-sm navbar-light bg-info main-nav">
                 <div class="container">
-                    <a class="navbar-brand" href="{{url_for('main.index')}}">Reddit by $enya</a>
+                    <a class="navbar-brand" href="{{url_for('main.index')}}">QuaAns</a>
             
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('main.index')}}">Home</a>
+                            <a class="nav-link" href="{{url_for('main.index')}}">Домашняя</a>
                         </li>
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('topics.addtopic')}}">Create New Topic</a>
+                            <a class="nav-link" href="{{url_for('topics.addtopic')}}">Создать Новую Тему</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('topics.mytopics')}}">My Topics</a>
+                            <a class="nav-link" href="{{url_for('topics.mytopics')}}">Мои Темы</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
+                            <a class="nav-link" href="{{url_for('auth.logout')}}">Выйти</a> 
                         </li>
                         {% endif %}
                         {% if not current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('auth.login')}}">Sign In</a>
+                            <a class="nav-link" href="{{url_for('auth.login')}}">Вход</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('auth.signup')}}">Sign up</a>
+                            <a class="nav-link" href="{{url_for('auth.signup')}}">Регистрация</a>
                         </li>
                         {% endif %}
                     </ul>
