--- a/app/templates/viewtopic.html
+++ b/app/templates/viewtopic.html
@@ -17,19 +17,19 @@
 <form action="/addcomment" method="POST" style="margin-bottom: 50px;">
     <input type="text" name='topicId' value="{{topic.id}}" hidden>
    <div class="input-group">
-      <div class="input-group-prepend">
-         <span class="input-group-text">Comment</span>
+      <div class="input-group-prepend">   
+         <span class="input-group-text">Комментарий</span>
       </div>
       <input type="text" class="form-control" name="commentText">
       <div class="input-group-append">
-        <input type="submit" class="input-group-text bg-success text-white" id="basic-addon2" value="Submit">
+        <input type="submit" class="input-group-text bg-success text-white" id="basic-addon2" value="Отправить">
         
      </div>
    </div>
    
 </form>
 {% else %}
-<p style="margin-bottom: 50px;">You need to <a href="/login">authenticate</a> to leave a comment</p>
+<p style="margin-bottom: 50px;">Ты должен быть <a href="/login">авторизирован</a> чтобы написать комментарий</p>
 {% endif %}
 {%if comments%}
 {% for comment in comments %}
@@ -43,6 +43,6 @@
 </div>
 {% endfor %}
 {% else %}
-<div><h5 class="card-title m-auto" >There is no comments yet. You can be the first!</h5></div>
+<div><h5 class="card-title m-auto" >Тут как то тихо. Ты можешь здесь быть первым!</h5></div>
 {% endif %}
 {% endblock %}
