--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flea Market</title>
+    <title>FleaMarket</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: black;">
     <header class="container ">
 
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary container-fluid d-flex justify-content-between rounded-bottom">
-            <a class="navbar-brand text-white" href="/">Flea</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning container-fluid d-flex justify-content-between rounded-bottom">
+            <a class="navbar-brand text-white" href="/"><img src="../static/logo.png" style="width: 50px; height: 50px  ;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,7 +23,7 @@
                 {% if current_user.is_authenticated %}
 
                 <li class="nav-item dropdown mr-5 ">
-                  <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Actions
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
