--- a/app/templates/editstudent.html
+++ b/app/templates/editstudent.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="container m-auto w-150">
+<div class="container m-auto w-150" style="color: whitesmoke">
     <form class="w-50 m-auto pt-5" action="/editstudent" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
