--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,7 +12,7 @@
     </div>
 {% endif %}
 {% endwith %}
-<form method="POST" action="/login" class="w-50 m-auto pt-5">
+<form method="POST" action="/login" class="w-50 m-auto pt-5"style="color: whitesmoke">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
@@ -25,7 +25,7 @@
           <input type="checkbox" class="form-check-input" id="exampleCheck1" name="remember">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button  type="submit" class="btn btn-primary">Login</button>
 
         </form>
 </div>
