--- a/app/templates/newstudent.html
+++ b/app/templates/newstudent.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="container">
-<div class="d-flex justify-content-between p-2">
+<div class="d-flex justify-content-between p-2"style="color: whitesmoke">
     <h1>Add</h1>
     <div class="d-flex">
         <a href="/studentslist/0"><button type="button" class="btn btn-primary">Back</button></a>
     </div>
 </div>
 
-<div class="container m-auto w-150">
+<div class="container m-auto w-150" style="color: whitesmoke">
     <form class="w-50  pt-5" action="/newstudent" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
