--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-  <div class="d-flex justify-content-between p-2">
+  <div class="d-flex justify-content-between p-2"style="color: whitesmoke">
       <h1>All Students</h1>
       <div class="d-flex">
-          <a href="/newstudent"><button type="button" class="btn btn-primary">Add</button></a>
+          <a href="/newstudent"><button type="button" class="btn btn-primary"style="color: whitesmoke">Add</button></a>
       </div>
   </div>
   <div class="container-sm mt-5 ">
