--- a/app/templates/newtraining.html
+++ b/app/templates/newtraining.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="container m-auto w-150">
+<div class="container m-auto w-150" style="color: black;">
     <form class="w-50  pt-5" action="/newtraining" method="POST">
         <div class="form-group">
           <label for="exampleInputEmail1">Date</label>
@@ -17,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            <label for="exampleFormControlSelect1">Example select</label>
+            <label for="exampleFormControlSelect1">Group select</label>
             <select class="form-control" id="exampleFormControlSelect1" name="group">
                 {% for group in grouplist %}
               <option>{{group.text}}</option>
