--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -11,14 +11,14 @@
     </div>
 {% endif %}
 {% endwith %}
-<form method="POST" action="/signup" class="w-50 m-auto pt-5">
+<form method="POST" action="/signup" class="w-50 m-auto pt-5"style="color: whitesmoke">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Name</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="name">
+            <input type="text" class="form-control" id="exampleInputPassword1" name="name">
           </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
