--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>friedco</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <header>
 
 
-        <nav class="navbar navbar-expand-sm navbar-light  main-nav" style="background-color: #8B008B;">
+        <nav class="navbar navbar-expand-sm navbar-light  main-nav" style="background-color: #3B2D6E">
                 <div class="container">
-                    <a class="navbar-brand" style= "font-size: 30px; color: cornsilk;" href="{{url_for('main.index')}}">whowho?</a>
+                    <a class="navbar-brand" style= "font-size: 30px; color: cornsilk; font-weight: bold; font-style: italic;" href="{{url_for('main.index')}}">whowho?</a>
             
                     <ul class="nav navbar-nav">
                         {% if current_user.is_authenticated %}
@@ -27,10 +30,10 @@
                         {% endif %}
                         {% if not current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('auth.login')}}">Sign In</a>
+                            <a class="nav-link" style = "background-color: #D5CFED; font-weight: bold; font-style: italic;" href="{{url_for('auth.login')}}">Sign In</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('auth.signup')}}">Sign up</a>
+                            <a class="nav-link" href="{{url_for('auth.signup')}}" style = "background-color: cornsilk; font-weight: bold; font-style: italic">Sign up</a>
                         </li>
                         {% endif %}
                     </ul>
