--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<body style= "background-color: #DDA0DD;"></body>
-<h1 class="title" style="margin-top: 10%; padding: 20px; font-size: 50px; color: #BC8F8F">
+<body style= "background-color: #BFAFF7;"></body>
+<h1 class="title" style="margin-top: 10%; padding: 20px; font-size: 50px; color: #3F3075; font-family: 'Abril Fatface', cursive;">
   Remember anything about your friends?
 </h1>
 <h2 class="subtitle" style="padding: 20px; font-style: italic; font-weight: lighter;">
