--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between p-2">
-    <h1>Sign Up</h1>
+    <h1 style= "font-family: 'Abril Fatface', cursive; margin-top: 5%; margin-left: 10%; padding: 20px">Sign Up</h1>
 </div>
         {% with messages = get_flashed_messages() %}
 {% if messages %}
@@ -11,6 +11,7 @@
     </div>
 {% endif %}
 {% endwith %}
+<body style= "background-color: #BFAFF7;">
 <form method="POST" action="/signup" class="w-50 m-auto pt-5">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -18,7 +19,7 @@
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Name</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="name">
+            <input type="text" class="form-control" id="exampleInputPassword1" name="name">
           </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
@@ -27,5 +28,5 @@
 
         <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
-
+</body>
 {% endblock %}
