--- a/app/templates/newcard.html
+++ b/app/templates/newcard.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="d-flex justify-content-between p-2">
-    <h1>New Anket</h1>
+    <h1 style = "font-family:'Abril Fatface', cursive; margin-top: 5%; margin-left: 10%; padding: 20px">New Anket</h1>
     <a href="/mycards"><button type="button" class="btn btn-primary">Back</button></a>    
 </div>
+<body style= "background-color: #BFAFF7;"></body>
 <form class="w-50 m-auto" method="POST" action="addcard" enctype="multipart/form-data">
     <div class="form-group">
       <label for="exampleInputEmail1">First Name</label>
