--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,10 +22,10 @@
                     <ul class="nav navbar-nav">
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('cards.mycards')}}">Friend cards</a>
+                            <a class="nav-link" style = "background-color: #D5CFED; font-weight: bold; font-style: italic;" href="{{url_for('cards.mycards')}}">Friend cards</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
+                            <a class="nav-link" style = "background-color: cornsilk; font-weight: bold; font-style: italic" href="{{url_for('auth.logout')}}">Log Out</a>
                         </li>
                         {% endif %}
                         {% if not current_user.is_authenticated %}
