--- a/app/templates/new_one.html
+++ b/app/templates/new_one.html
@@ -31,19 +31,9 @@
         <input type="text" class="form-control" maxlength="40" name="adress">
       </div>
       <div class="form-group">
-        <label for="exampleInputEmail1">Date of Birth</label>
+        <label for="exampleInputEmail1">Birthday</label>
         <input type="date" class="form-control" maxlength="40" name="birthDate">
       </div>
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-        </div>
-        <div class="custom-file">
-          <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="image">
-          <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-        </div>
-      </div>
-
       <br>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
