--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
                     <ul class="nav navbar-nav">
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" style = "background-color: #DEB887; font-weight: bold; font-style: italic;" href="{{url_for('cards.mycards')}}">Your collection</a>
+                            <a class="nav-link" style = "background-color: #DEB887; font-weight: bold; font-style: italic;" href="{{url_for('main.index')}}">Your collection</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" style = "background-color: #D2B48C; font-weight: bold; font-style: italic" href="{{url_for('auth.logout')}}">Log Out</a>
