--- a/app/templates/new_one.html
+++ b/app/templates/new_one.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="d-flex justify-content-between p-2">
-    <h1 style = "font-family:'Abril Fatface', cursive; margin-top: 5%; margin-left: 10%; padding: 20px">New card</h1>
+    <h1 style = "font-family:'Abril Fatface', cursive; margin-top: 5%; margin-left: 10%; padding: 20px">New form</h1>
     <a href="/profile"><button type="button" class="btn btn-primary">Back to profile</button></a>
 </div>
 <body style= "background-color: #FFDEAD;"></body>
