--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -2,39 +2,121 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Список игроков в мужской суперлиге</title>
+  <title>Что-то о волейболе</title>
  </head>
  <body>
-  <h1>Игроки</h1>
+  <h1 align ="center" style="color:Black">Список мужских команд суперлиги(Волейбол)</h1>
   <div class="card" style="width: 18rem;">
+    <img src="https://zenit-kazan.com/templates/rus/img/logo.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h5 class="card-title">Зенит-Казань</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://zenit-kazan.com/team/zenit/players/" class="btn btn-primary">Ссылка на команду :)</a>
     </div>
   </div>
   <div class="card" style="width: 18rem;">
+    <img src="https://pbs.twimg.com/profile_images/1517049026457358337/a9JnXl0e_400x400.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h5 class="card-title">Динамо(Москва)</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://vcdynamo.ru/komanda/dinamo/" class="btn btn-primary">Ссылка на команду :)</a>
     </div>
   </div>
   <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h5 class="card-title">Локомотив(Новосиб)</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://lokovolley.com/super/team/" class="btn btn-primary">Ссылка на команду :)</a>
     </div>
   </div>
-  <!-- Комментарий -->
-  <p>Первый абзац.</p>
-  <p>Второй абзац.</p>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Белогорье</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://www.belogorievolley.ru/teams/teams-2021-2022/belogorie-team-2021-2022.html" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Факел</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://www.fakelvolley.ru/superleague/team" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Кузбасс</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="http://kuzbass-volley.ru/persons/?SECTION_ID=91" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Урал</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://volleyufa.com/teams/ural/players/" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Искра</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://iskra-volley.ru/sostav-sezon-2020-2021/" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">ЦСКА</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://cska.ru/sports/72" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Газпром-Югра</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="http://gazprom-ugra.ru/club/gazpromugra/gazprom-ugra-team/" class="btn btn-primary">Ссылка на команду :)</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Зенит-СПБ</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://vczenit-spb.ru/team/zenit/" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Нефтяник</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://orenvolley.com/pages/50/" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Енисей</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="http://vc-enisey.ru/team/mvc-enisey" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Аск</h5>
+      <p class="card-text">Если хотите узнать больше о команде переходите по ссылке снизу.</p>
+      <a href="https://www.nn-volley.ru/main/team/roster/ask/2021-2022/" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
  </body>
 </html>
