--- a/app/templates/new_one.html
+++ b/app/templates/new_one.html
@@ -5,7 +5,7 @@
     <a href="/profile"><button type="button" class="btn btn-primary">Back to profile</button></a>
 </div>
 <body style= "background-color: #FFDEAD;"></body>
-<form class="w-50 m-auto" method="POST" action="addcard" enctype="multipart/form-data">
+<form class="w-50 m-auto" method="POST" action="/newcard" enctype="multipart/form-data">
     <div class="form-group">
       <label for="exampleInputEmail1">Name</label>
       <input type="text" class="form-control" maxlength="40" name="name">
@@ -35,6 +35,7 @@
         <input type="text" class="form-control" maxlength="40" name="adress">
       </div>
       <br>
+    <!-- <button type="submit" class="btn btn-primary">Create</button> -->
     <button type="submit" class="btn btn-primary">Create</button>
   </form>
 
