--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body style= "background-color: #FFF0F5;"></body>
 <h1 class="title" style="margin-top: 10%; padding: 20px; font-size: 50px; color: #FAEBD7; font-family: 'Abril Fatface', cursive;">
-  Remember anything about your friends?
+  Evetyrhing you need to know about your friends is here
 </h1>
 <h2 class="subtitle" style="padding: 20px; font-style: italic; font-weight: lighter;">
     We will help you never forget! 
