--- a/app/templates/new_one.html
+++ b/app/templates/new_one.html
@@ -4,7 +4,7 @@
     <h1 style = "font-family:'Abril Fatface', cursive; margin-top: 5%; margin-left: 10%; padding: 20px">New form</h1>
     <a href="/profile"><button type="button" class="btn btn-primary">Back to profile</button></a>
 </div>
-<body style= "background-color: #a37838;"></body>
+<body style= "background-color: #FFDEAD;"></body>
 <form class="w-50 m-auto" method="POST" action="/newcard" enctype="multipart/form-data">
     <div class="form-group">
       <label for="exampleInputEmail1">Name</label>
